make proccess builder, but doesn' t stop after stopping